--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -10,20 +10,56 @@ We've tested *EOSFactory* on the following platforms:
 
 **NOTE:** *EOSFactory* is now compatible with the latest release of *EOSIO*, tagged as [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher), and from now on we expect it to be fully compatible with any subsequent *EOSIO* release.
 
-**NOTE:** *EOSFactory* requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
+## General Prerequisites
+
+We assume that you have successfully installed *EOSIO* [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). Please note that *EOSFactory* requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
+
+After the build is complete, make sure to install *EOSIO* with this command:
+
+```
+sudo ./eosio_install.sh
+```
 
 ## Prerequisites for Ubuntu & MacOS
 
 * Regarding Ubuntu, if you are using a server edition (i.e. not desktop), you'll need to have `gnome-terminal` and an X server installed.
-* We assume that you have successfully installed *EOSIO* [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment).
 * We also assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) installed.
 
 ## Prerequisites for Windows
 
 - We assume that you have [*Windows Subsystem for Linux - Ubuntu 18.04*](https://www.microsoft.com/en-us/p/ubuntu-1804/9n9tngvndl3q) installed.
-- We also assume that you have successfully installed *EOSIO* [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment).
 - The only option you have regarding *EOSIO* installation is building it in the Ubuntu 18.04 bash (supplied by WSL), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, yet build it in WSL, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
 - And finally, we assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.5 by default.
+
+## Upgrading
+
+If you have a previous installation of *EOSFactory* on your machine, make sure to remove the `EOSIO_SHARED_MEMORY_SIZE_MB` variable from your system.
+
+To do this, edit the `.profile` or `.bash_profile` file:
+
+- If you are on Ubuntu or *Windows Subsystem for Linux*:
+
+  ```
+  nano ~/.profile
+  ```
+
+- If you are on MacOS:
+
+  ```
+  nano ~/.bash_profile
+  ```
+
+And make sure this entry is removed:
+
+```
+export EOSIO_SHARED_MEMORY_SIZE_MB=100
+```
+
+**NOTE:** You might need to restart your console (or your machine) to apply the change. If everything has been removed correctly, this command should return an empty value:
+
+```
+echo $EOSIO_SHARED_MEMORY_SIZE_MB
+```
 
 ## Build on Ubuntu & MacOS
 
@@ -183,6 +219,10 @@ If the test fails due to the `ModuleNotFoundError` error, make sure that after b
 #### Case 3
 
 If the test fails while executing `reset() ` with the `string indices must be integers` error, make sure you have EOSIO [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) installed. Also, make sure no other instance of `nodeos` is running on your machine.
+
+#### Case 4
+
+If `nodeos` fails to work properly make sure the `EOSIO_SHARED_MEMORY_SIZE_MB` variable has been removed properly, as described above.
 
 ## Subsequent builds
 
