--- a/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -35,9 +35,21 @@ The first parameter (in our case `contract.name`) is the name of your contract. 
 
 The second parameter (in our case `01_hello_world`) denotes the template from which the new contract will be created. As of now there are only two templates (`01_hello_world` and `02_eosio_token`) but there'll be more in the future. This parameter is optional, the default value is `01_hello_world`.
 
-When you open the newly created project with VSC, you'll see the following file structure:
+## Open the new project in *Visual Studio Code*
 
-![file_structure](./images/file_structure.png)
+You can open the new project manually by launching VSC and navigating to the projects's folder.
+
+Alternatively, you can add the `--vsc` option to the command and then VSC will launch automatically, for example:
+
+```
+python3 ./utils/create_workspace.py contract.name 01_hello_world --vsc
+```
+
+## Folder structure
+
+Once the project is open in VSC, you'll see the following file structure:
+
+![file_structure](D:/Workspaces/EOS/eosfactory/docs/sphinx/source/tutorials/images/file_structure.png)
 
 What you get is a complete smart-contract workspace with clear separation between smart-contract source code, build output files and unit tests. Everything is set up and ready to be built and unit tested:
 
