--- a/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
@@ -29,7 +29,7 @@ We consider two cases, depending whether you already have an account a public te
 
 #### Case 1: You do not have an account
 
-We recommend using the following Python script:
+Use the following Python script:
 
 ```
 python3 utils/register_testnet_with_new_account.py
@@ -56,11 +56,15 @@ Active Public Key: EOS5wXxYMAxnQ2XzCHjkyovG1HwttbwrJYLUfLiExmVYwRRxCXtJd
 
 To complete the process, use the above data to register a new account on a public testnet.
 
+**NOTE:** Make sure to use the testnet's faucet to fund the newly created account with enough liquid EOS to be able to spawn other accounts, delegate CPU & NET and buy RAM for them.
+
 When you are ready, type `go` to let *EOSFactory* verify that the newly created account has been registered properly with the testnet.
 
 #### Case 2: You already have an account
 
-We recommend using the following Python script:
+We assume that you already have an account and it's funded with enough liquid EOS to be able to spawn other accounts, delegate CPU & NET and buy RAM for them.
+
+Use the following Python script:
 
 ```
 python3 utils/register_testnet_with_existing_account.py
@@ -117,3 +121,25 @@ Use the `-r` option, if you want to run the test from scratch, i.e. with the exi
 ```
 python3 test/unittest1.py jungle -r
 ```
+
+## Utilizing public testnet in an *ad hoc* mode
+
+If you have an account on a public testnet, you can skip the process of registering this testnet with *EOSFactory* and run a unit test directly, by using the `-t` option.
+
+```
+python3 test/unittest1.py -t
+```
+
+This option requires four parameters:
+
+- an URL of a public node offering access to the testnet, e.g. `http://88.99.97.30:38888`,
+- your account name, as registered on the testnet,
+- your account's owner private key,
+- your account's active private key.
+
+In our case the command looks like this:
+
+```
+python3 test/unittest1.py -t http://88.99.97.30:38888 yof35z5dw3sw 5JUHGgQpyfRkjYXuqzvEZWaoDHPxML9Qsi4ArPzCMBqqbJnSSEN 5JwR5KoqWN9sVwo8FqakA9Unnf2mAb9GyagLPWMgzqTjSoFixJV
+```
+
