list registered testnets

--- a/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
@@ -35,7 +35,7 @@ Use the following Python script:
 python3 utils/register_testnet_with_new_account.py
 ```
 
-This script takes two parameters:
+It takes two parameters:
 
 - an URL of a public node offering access to the testnet, e.g. `http://88.99.97.30:38888`,
 - your pseudonym for the testnet, e.g. `jungle`.
@@ -70,7 +70,7 @@ Use the following Python script:
 python3 utils/register_testnet_with_existing_account.py
 ```
 
-This is script take five parameters:
+It takes five parameters:
 
 - an URL of a public node offering access to the testnet, e.g. `http://88.99.97.30:38888`,
 - your pseudonym for the testnet, e.g. `jungle`,
@@ -85,6 +85,21 @@ python3 utils/register_testnet_with_existing_account.py http://88.99.97.30:38888
 ```
 
 As a result, *EOSFactory* verifies that the account supplied by you is properly registered with the testnet.
+
+## List registered testnets
+
+Open a bash terminal and run Python CLI:
+
+```
+python3
+```
+
+Once in the Python shell, run this command:
+
+```
+from eosfactory import *
+testnets()
+```
 
 ## Run unit tests
 
