--- a/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -18,38 +18,46 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* can be combined 
 
 ## Create a new smart-contract VSC project
 
-In a bash terminal first switch to the `eosfactory` folder:
+In a bash terminal run the following command:
 
 ```
 cd eosfactory
+python3 ./utils/create_workspace.py foo_bar 01_hello_world
 ```
 
-And then run the following command:
+Alternatively, use this command which is more handy, as it works from any directory:
 
 ```
-python3 ./utils/create_workspace.py contract.name 01_hello_world
+eval $eosf template create foo_bar 01_hello_world
 ```
 **NOTE:** If you are on Windows and have not restarted your WSL bash terminal after *EOSFactory* installation, you'll need to do so before you execute this command (if you are using WSL bash terminal inside *Visual Studio Code*, restart your VSC instead).
 
-The first parameter (in our case `contract.name`) is the name of your contract. It can be any name you want, provided there are no spaces in it. Letters, numbers, underscores `_`, dots `.` and dashes `-` are allowed.
+The first parameter (in our case `foo_bar`) is the name of your contract. It can be any name you want, provided there are no spaces in it. Letters, numbers, underscores `_`, dots `.` and dashes `-` are allowed.
 
-The second parameter (in our case `01_hello_world`) denotes the template from which the new contract will be created. As of now there are only two templates (`01_hello_world` and `02_eosio_token`) but there'll be more in the future. This parameter is optional, the default value is `01_hello_world`.
+The second parameter (in our case `01_hello_world`) denotes the template from which the new contract will be created. As of now there are three templates (`01_hello_world`, `02_eosio_token` and `03_tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `01_hello_world`.
 
 ## Open the new project in *Visual Studio Code*
 
 You can open the new project manually by launching VSC and navigating to the projects's folder.
 
-Alternatively, you can add the `--vsc` option to the command and then VSC will launch automatically, for example:
+Alternatively, you can add the `--vsc` option to the command and then VSC will launch automatically, already switched to the projects's folder, for example:
 
 ```
-python3 ./utils/create_workspace.py contract.name 01_hello_world --vsc
+cd eosfactory
+python3 ./utils/create_workspace.py foo_bar 01_hello_world --vsc
+```
+
+Or using a simpler syntax:
+
+```
+eval $eosf template create foo_bar 01_hello_world --vsc
 ```
 
 ## Folder structure
 
 Once the project is open in VSC, you'll see the following file structure:
 
-![file_structure](D:/Workspaces/EOS/eosfactory/docs/sphinx/source/tutorials/images/file_structure.png)
+![file_structure](/images/file_structure.png)
 
 What you get is a complete smart-contract workspace with clear separation between smart-contract source code, build output files and unit tests. Everything is set up and ready to be built and unit tested:
 
