--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -31,7 +31,7 @@ sudo ./eosio_install.sh
 - The only option you have regarding *EOSIO* installation is building it in the Ubuntu 18.04 bash (supplied by WSL), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, yet build it in WSL, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
 - And finally, we assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.5 by default.
 
-## Upgrading
+## Upgrading from previous version
 
 If you have a previous installation of *EOSFactory* on your machine, make sure to remove the `EOSIO_SHARED_MEMORY_SIZE_MB` variable from your system.
 
@@ -55,10 +55,28 @@ And make sure this entry is removed:
 export EOSIO_SHARED_MEMORY_SIZE_MB=100
 ```
 
+While all the other entries need to stay:
+
+```
+export EOSIO_SOURCE_DIR=...
+export EOSIO_EOSFACTORY_DIR=...
+export U_HOME=...
+export eosf=...
+export EOSIO_CONTRACT_WORKSPACE=...
+export PYTHONPATH=...
+```
+
 **NOTE:** You might need to restart your console (or your machine) to apply the change. If everything has been removed correctly, this command should return an empty value:
 
 ```
 echo $EOSIO_SHARED_MEMORY_SIZE_MB
+```
+
+Then you can just run the `build.sh` script with the `-r` option and without having to specify any other parameters, as the they are already stored in the system variables:
+
+```
+cd eosfactory
+./build.sh -r
 ```
 
 ## Build on Ubuntu & MacOS
@@ -206,7 +224,7 @@ python3 ./tests/03_tic_tac_toe.py
 Error 3040003: Transaction should have at least one required authority
 ```
 
-## Troubleshooting
+## Troubleshooting specific errors
 
 #### Case 1
 
@@ -218,11 +236,52 @@ If the test fails due to the `ModuleNotFoundError` error, make sure that after b
 
 #### Case 3
 
-If the test fails while executing `reset() ` with the `string indices must be integers` error, make sure you have EOSIO [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) installed. Also, make sure no other instance of `nodeos` is running on your machine.
+If a unit test fails while executing the `reset() ` command, make sure you have EOSIO [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) installed. Also, make sure no other instance of `nodeos` is running on your machine.
 
 #### Case 4
 
-If `nodeos` fails to work properly make sure the `EOSIO_SHARED_MEMORY_SIZE_MB` variable has been removed properly, as described above.
+If `nodeos` is launched but fails to produce blocks, make sure the `EOSIO_SHARED_MEMORY_SIZE_MB` variable has been properly removed from system variables, as described above.
+
+#### Case 5
+
+If a unit tests fails due to the `execve` error, make sure you have executed the `eosio_install.sh` script after *EOSIO* build, as described above.
+
+## Troubleshooting general problems
+
+First, make sure *EOSFactory* configuration is correct by running this command:
+
+```
+eval $EOSF get config
+```
+
+As a result, you should get data similar to this:
+
+```
+"EOSIO_SOURCE_DIR": "/mnt/x/Workspaces/EOS/eos",
+"EOSIO_EOSFACTORY_DIR": "/mnt/x/Workspaces/EOS/eosfactory",
+"EOSIO_DATA_DIR": "/mnt/x/Workspaces/EOS/eosfactory/build/daemon/data-dir/",
+"EOSIO_CONFIG_DIR": "/mnt/x/Workspaces/EOS/eosfactory/build/daemon/data-dir/",
+"KEOSD_WALLET_DIR": "${HOME}/eosio-wallet/",
+"nodeExe": "/mnt/x/Workspaces/EOS/eos/build/programs/nodeos/nodeos",
+"cleosExe": "/mnt/x/Workspaces/EOS/eos/build/programs/cleos/cleos",
+"genesisJson": "/mnt/x/Workspaces/EOS/eosfactory/build/daemon/data-dir/genesis.json",
+"EOSIO_DAEMON_ADDRESS": "127.0.0.1:8888",
+"EOSIO_KEY_PRIVATE": "5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3",
+"EOSIO_KEY_PUBLIC": "EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV",
+"EOSIO_WALLET_ADDRESS": "127.0.0.1:8888",
+"EOSIO_DAEMON_NAME": "nodeos",
+"EOSIO_WASM_CLANG": "${HOME}/opt/wasm/bin/clang",
+"EOSIO_BOOST_INCLUDE_DIR": "${HOME}/opt/boost/include",
+"EOSIO_WASM_LLVM_LINK": "${HOME}/opt/wasm/bin/llvm-link",
+"EOSIO_WASM_LLC": "${HOME}/opt/wasm/bin/llc",
+"EOSIO_S2WASM": "/usr/local/bin/eosio-s2wasm",
+"EOSIO_WAST2WASM": "/usr/local/bin/eosio-wast2wasm",
+"sharedMemory": "200",
+"contractWorkspace": "/mnt/x/Workspaces/EOS/contracts",
+"workspaceEosio": "/mnt/x/Workspaces/EOS/eos/build/contracts/"
+```
+
+Next, verify that all the above paths are resolved.
 
 ## Subsequent builds
 
