--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -251,7 +251,7 @@ If a unit tests fails due to the `execve` error, make sure you have executed the
 First, make sure *EOSFactory* configuration is correct by running this command:
 
 ```
-eval $EOSF get config
+eval $eosf get config
 ```
 
 As a result, you should get data similar to this:
