--- a/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -34,7 +34,7 @@ eval $eosf template create foo_bar 01_hello_world
 
 The first parameter (in our case `foo_bar`) is the name of your contract. It can be any name you want, provided there are no spaces in it. Letters, numbers, underscores `_`, dots `.` and dashes `-` are allowed.
 
-The second parameter (in our case `01_hello_world`) denotes the template from which the new contract will be created. As of now there are three templates (`01_hello_world`, `02_eosio_token` and `03_tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `01_hello_world`.
+The second parameter (in our case `01_hello_world`) denotes the template from which the new contract will be created. As of now there are three templates to choose from (i.e. `01_hello_world`, `02_eosio_token` and `03_tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `01_hello_world`.
 
 ## Open the new project in *Visual Studio Code*
 
@@ -57,7 +57,7 @@ eval $eosf template create foo_bar 01_hello_world --vsc
 
 Once the project is open in VSC, you'll see the following file structure:
 
-![file_structure](/images/file_structure.png)
+![file_structure](./images/file_structure.png)
 
 What you get is a complete smart-contract workspace with clear separation between smart-contract source code, build output files and unit tests. Everything is set up and ready to be built and unit tested:
 
