--- a/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -27,15 +27,27 @@ from eosfactory import *
 To create a new contract from a pre-defined template all you need is a name for the contract and the name of the template, for example:
 
 ```
-contract = ContractBuilder(contract_workspace_from_template("hello.world", template="01_hello_world"))
+contract = ContractBuilder(contract_workspace_from_template("foo_bar", template="01_hello_world"))
 ```
 
-**NOTE:**  Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are three templates to choose from (i.e. `01_hello_world`, `02_eosio_token` and `03_tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `01_hello_world`.
+**NOTE:** Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are three templates to choose from (i.e. `01_hello_world`, `02_eosio_token` and `03_tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `01_hello_world`.
 
 The above command creates a new contract. However, if you want to access an existing one, use the following syntax instead:
 
 ```
-contract = ContractBuilder("hello.world")
+contract = ContractBuilder("foo_bar")
+```
+
+**NOTE:** In a similar way you could access a demo contract supplied by *EOSFactory*, for example:
+
+```
+contract = ContractBuilder("01_hello_world")
+```
+
+Or a demo contract supplied by *EOSIO*, for example:
+
+```
+contract = ContractBuilder("eosio.token")
 ```
 
 ## Edit the source code
@@ -46,7 +58,7 @@ To check the directory where the contract's files are located:
 contract.path()
 ```
 
-Locate the folder containing the new contract (if you're not sure where it is, use the output produced by the `contract.path` method) and edit the `hello.world.cpp` file in your favorite text editor by commenting out line `18`, i.e. `require_auth( user ) `:
+Locate the folder containing the new contract (if you're not sure where it is, use the output produced by the `contract.path` method) and edit the `foo_bar.cpp` file in your favorite text editor by commenting out line `18`, i.e. `require_auth( user ) `:
 
 ```
 #include <eosiolib/eosio.hpp>
@@ -118,12 +130,26 @@ contract = Contract(host, contract.path())
 Or you can use the contract name explicitly:
 
 ```
-contract = Contract(host, "hello.world")
+contract = Contract(host, "foo_bar")
 ```
 
 And now we can deploy the contract:
 
 ```
+contract.deploy()
+```
+
+**NOTE:** In a similar way you could deploy a demo contract supplied by *EOSFactory*, for example:
+
+```
+contract = Contract(host, "01_hello_world")
+contract.deploy()
+```
+
+Or a demo contract supplied by *EOSIO*, for example:
+
+```
+contract = Contract(host, "eosio.token")
 contract.deploy()
 ```
 
@@ -162,7 +188,7 @@ All the above variations should work, as the contract allows anyone to authorize
 INFO debug user name: alice @ 12:26:05 hello.world.cpp[17](hi)
 ```
 
-This is the result of a `logger_info` clause  in the `hello.world.cpp` file (line `17`):
+This is the result of a `logger_info` clause in the `foo_bar.cpp` file (line `17`):
 
 ```
 logger_info( "debug user name: ", name{user} );
