testnet mapping applied

--- a/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
@@ -25,66 +25,66 @@ Another problem is that you do not have full control of a public testnet (as is 
 
 ## Register a public testnet with *EOSFactory* 
 
-We consider two cases, depending whether you already have an account a public testnet or not.
+We consider two cases, depending whether you already have an account registered on a public testnet or not.
 
 #### Case 1: You do not have an account
 
 Use the following Python script:
 
 ```
-python3 utils/register_testnet_with_new_account.py
+python3 utils/register_testnet.py
 ```
 
-It takes two parameters:
+The script two parameters:
 
 - an URL of a public node offering access to the testnet, e.g. `http://88.99.97.30:38888`,
-- your pseudonym for the testnet, e.g. `jungle`.
+- your preferred alias for the testnet, e.g. `jungle`.
 
 In our case the command looks like this:
 
 ```
-python3 utils/register_testnet_with_new_account.py http://88.99.97.30:38888 jungle
+python3 utils/register_testnet.py http://88.99.97.30:38888 --alias jungle
 ```
 
 In response you will get data similar to the following example:
 
 ```
-Accout Name: yof35z5dw3sw
+Account Name: dgxo1uyhoytn
 Owner Public Key: EOS6a8nH9Ch2seciL3RmsiwwUVJyim9kVaHTimqeRbSdqBAfu5mMS
 Active Public Key: EOS5wXxYMAxnQ2XzCHjkyovG1HwttbwrJYLUfLiExmVYwRRxCXtJd
 ```
 
-To complete the process, use the above data to register a new account on a public testnet.
+To complete the process, use the above data to register a new account on a public testnet. This account will serve as a master account for the *EOSFactory* testnet object.
 
 **NOTE:** Make sure to use the testnet's faucet to fund the newly created account with enough liquid EOS to be able to spawn other accounts, delegate CPU & NET and buy RAM for them.
 
-When you are ready, type `go` to let *EOSFactory* verify that the newly created account has been registered properly with the testnet.
+When you are ready, type `go` to let the script verify that the newly created account has been registered properly with the testnet. Once this is done, the script proceeds to register the testnet with *EOSFactory*.
 
 #### Case 2: You already have an account
 
-We assume that you already have an account and it's funded with enough liquid EOS to be able to spawn other accounts, delegate CPU & NET and buy RAM for them.
+We assume that you already have an account registered on a public testnet and this account is able to act as a master account for the *EOSFactory* testnet object, i.e. it's funded with enough liquid EOS to be able to spawn other accounts, delegate CPU & NET and buy RAM for them.
 
 Use the following Python script:
 
 ```
-python3 utils/register_testnet_with_existing_account.py
+python3 utils/register_testnet.py
 ```
 
-It takes five parameters:
+The script takes five parameters:
 
 - an URL of a public node offering access to the testnet, e.g. `http://88.99.97.30:38888`,
-- your pseudonym for the testnet, e.g. `jungle`,
-- your account name, as registered on the testnet,
+- your preferred alias for the testnet, e.g. `jungle`,
+- your account name, as registered on the testnet, e.g. `dgxo1uyhoytn`,
 - your account's owner private key,
 - your account's active private key.
 
 In our case the command looks like this:
 
 ```
-python3 utils/register_testnet_with_existing_account.py http://88.99.97.30:38888 jungle yof35z5dw3sw 5JUHGgQpyfRkjYXuqzvEZWaoDHPxML9Qsi4ArPzCMBqqbJnSSEN 5JwR5KoqWN9sVwo8FqakA9Unnf2mAb9GyagLPWMgzqTjSoFixJV
+python3 utils/register_testnet.py http://88.99.97.30:38888 --alias jungle --master dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
 ```
 
-As a result, *EOSFactory* verifies that the account supplied by you is properly registered with the testnet.
+As a result, the script verifies that the account supplied by you is properly registered with the testnet and then proceeds to register the testnet with *EOSFactory*.
 
 ## List registered testnets
 
@@ -155,6 +155,6 @@ This option requires four parameters:
 In our case the command looks like this:
 
 ```
-python3 test/unittest1.py -t http://88.99.97.30:38888 yof35z5dw3sw 5JUHGgQpyfRkjYXuqzvEZWaoDHPxML9Qsi4ArPzCMBqqbJnSSEN 5JwR5KoqWN9sVwo8FqakA9Unnf2mAb9GyagLPWMgzqTjSoFixJV
+python3 test/unittest1.py -t http://88.99.97.30:38888 dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
 ```
 
