--- a/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
@@ -117,7 +117,7 @@ Next, you can attempt to run the same unit test on a public testnet:
 python3 test/unittest1.py jungle
 ```
 
-**NOTE:** The positional parameter, in our case `jungle`, indicates the pseudonym of the public testnet.
+**NOTE:** The positional parameter, in our case `jungle`, indicates the alias of the public testnet.
 
 Similarly, you can run the other (non-standard) test:
 
