obligatory alias flag rm

--- a/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
@@ -43,15 +43,15 @@ The script two parameters:
 In our case the command looks like this:
 
 ```
-python3 utils/register_testnet.py http://88.99.97.30:38888 --alias jungle
+python3 utils/register_testnet.py http://88.99.97.30:38888 jungle
 ```
 
-In response you will get data similar to the following example:
+In response you will receive a message similar to the following example:
 
 ```
-Account Name: dgxo1uyhoytn
-Owner Public Key: EOS6a8nH9Ch2seciL3RmsiwwUVJyim9kVaHTimqeRbSdqBAfu5mMS
-Active Public Key: EOS5wXxYMAxnQ2XzCHjkyovG1HwttbwrJYLUfLiExmVYwRRxCXtJd
+Account Name: tcfchehyagd4
+Owner Public Key: EOS4x5jhfaJ6vA7z5K36dWFkeZfabRbSoSoGUQFjvWNUwtFt7jXGU
+Active Public Key: EOS8LQq1VDf1F5cBSdYvbott9GgsR7Bvz4ttR8A6RJiHDKsPdBY1c
 ```
 
 To complete the process, use the above data to register a new account on a public testnet. This account will serve as a master account for the *EOSFactory* testnet object.
@@ -81,7 +81,7 @@ The script takes five parameters:
 In our case the command looks like this:
 
 ```
-python3 utils/register_testnet.py http://88.99.97.30:38888 --alias jungle --master dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
+python3 utils/register_testnet.py http://88.99.97.30:38888 jungle -a dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
 ```
 
 As a result, the script verifies that the account supplied by you is properly registered with the testnet and then proceeds to register the testnet with *EOSFactory*.
