--- a/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -19,7 +19,7 @@ python3
 Once in the Python shell, import the *EOSFactory* library:
 
 ```
-from eosfactory import *
+from eosf import *
 ```
 
 ## Create a new contract from template
