--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -18,7 +18,7 @@ python3
 Once in the Python shell, import the *EOSFactory* library:
 
 ```
-from eosfactory import *
+from eosf import *
 ```
 
 ## Start Local Testnet
