contract_workspace_from_template -> workspace_from_template

--- a/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -27,7 +27,7 @@ from eosf import *
 To create a new contract from a pre-defined template all you need is a name for the contract and the name of the template, for example:
 
 ```
-contract = ContractBuilder(contract_workspace_from_template("foo_bar", template="01_hello_world"))
+contract = ContractBuilder(workspace_from_template("foo_bar", template="01_hello_world"))
 ```
 
 **NOTE:** Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are three templates to choose from (i.e. `01_hello_world`, `02_eosio_token` and `03_tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `01_hello_world`.
