--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -12,7 +12,9 @@ We've tested *EOSFactory* on the following platforms:
 
 ## General Prerequisites
 
-We assume that you have successfully installed *EOSIO* [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). Please note that *EOSFactory* requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
+We assume that you have successfully installed *EOSIO* [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) on your machine. If that's not the case, please refer to [this guide](https://developers.eos.io/eosio-nodeos/docs/getting-the-code).
+
+**NOTE:** *EOSFactory* requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
 
 After the build is complete, make sure to install *EOSIO* with this command:
 
